public/stylesheets/main.css
html {
  box-sizing: border-box;
}


body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}



*, *::before, *::after {
  box-sizing: inherit;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
}

body {
  background-color: #4C4C6B;
  margin: 0;
  color: #f6f6fc;
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr;
  grid-template-areas:
    "nav"
    "main";
  font-size: 18px;
}

body > main {
  grid-area: main;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px;
  width: 90%;
  max-width: 1200px;
  margin: auto;
}

.home-grid {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px;
  width: 90%;
  max-width: 1200px;
  margin: auto;
}

body > main h2 {
  margin: 7px;
}

body > main h1 {
  display: inline;
  margin-bottom: 20px;
  color: #f6f6fc;
}

body > nav {
  grid-area: nav;
  background-color: #7070FF;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 7px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

nav > i.presence-title {
  font-size: 35px;
  color: #f6f6fc;
  padding: 5px;
}


nav > a {
  text-decoration: none;
  padding: 8px 8px;
  border: 2px solid transparent;
  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
}


nav > a:visited {
  color: #f6f6fc;
}

nav > a.left:hover, nav > a.active {
  color: #2c3e50;
  background-color: #f6f6fc;
  border-color: #f6f6fc;
}


nav > a.right {
  margin-left: auto;
  color: #f6f6fc;
}

nav > a.right:hover, nav > a.right.active {
  margin-left: auto;
  background-color: none;
  border-color: none;
}



button {
  padding: 10px 15px;
  background-color: #AF2BBF;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1em;
  margin: 10px;
}


.postbutton {
  padding: 10px 15px;
  background-color: #AF2BBF;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1em;
  margin: 0px;
}


button:hover {
  background-color: #82218c;
}


.profile-name {
  color: #4C4C6B;
  font-size: 30px;
  font-weight: 550;
  margin-bottom: 10px;
}

.profile-bio {
  font-size: 1.2em;
  margin-bottom: 15px;
}

.profile-content {
  font-size: 1em;
  line-height: 1.6;
  color: #333;
}


.text-field {
  width: 100%;
  padding: 10px;
  margin: 7px 7px 7px 0;
  border: 1px solid #ccc;
  border-radius: 4px;
}


.button {
  padding: 10px 15px;
  background-color: #AF2BBF;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1em;
  margin-top: 10px;
}

.button:hover {
  background-color: #82218c;
}


@media (max-width: 768px) {
  .profile-section {
    width: 95%;
    padding: 10px;
  }
  .profile-name, .profile-bio {
    text-align: center;
  }
}



.people-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 20px;
  padding: 20px;
}

.profile-card {
  background: #F6F6FC;
  color: #4C4C6B;
  display: block;
  border: 1px solid #ccc;
  padding: 10px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  text-decoration: none;
  color: inherit;
  background-color: white;
}

.profile-card div {
  margin-bottom: 10px;
}

.profile-card h3 {
  margin-top: 0;
  color: #4C4C6B;
}

.profile-card p {
  margin: 0 0 10px 0;
  color: #4C4C6B;
}

.profile-card .button {
  background: #F6F6FC;
  color: #4C4C6B;
  display: block;
  width: 100%;
  text-align: center;
  padding: 10px;
  background-color: #3498db;
  color: white;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.profile-card .button:hover {
  background-color: #295878;
}

.profile-card:hover {
  box-shadow: 0 8px 8px #7070FF;
}



.profile-info {
  background: #F6F6FC;
  color: #4C4C6B;
  padding: 20px;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  margin: 20px;
}

.button-link {
  text-decoration: none;
}

.update-form {
  margin-bottom: 20px;
}

.updates-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
  gap: 20px;
  padding: 20px;
}

.update-card {
  background: #F6F6FC;
  border-radius: 8px;
  padding: 15px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}



.update-actions {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.delete-button {
  background-color: #e74c3c;
}

.delete-button:hover {
  background-color: #c0392b;
}



.update-show-card {
  margin-bottom: 20px;
}



.update-posted-by {
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 10px;
}

.update-content {
  color: #F6F6FC;
  background: #4C4C6B;
  border: 1px solid #F6F6FC;
  border-radius: 8px;
  padding: 15px; 
  border-radius: 4px;
  margin-bottom: 10px;
}

.button-link {
  text-decoration: none;
}



.comment-form {
  margin-bottom: 20px;
}

.comments-section {
  width: 100%;
}

.comment-card {
  background: #F6F6FC;
  color: #4C4C6B;
  padding: 8px;
  margin: 10px 10px 10px 0;
  border-radius: 8px;
}


.comment-content {
  display: flex;
  align-items: center;
  margin: 0;
}



.back-button {
  display: flex;
  justify-content: flex-start;
  padding: 5px 7.5px;
  background-color: #AF2BBF;
  color: white;
  border: none;
  border-radius: 4px;
  text-decoration: none;
  font-size: 17px;
  width: fit-content;
  margin-bottom: 30px;
}

.back-button:hover {
  background-color: #82218c;
}

.main-title {
  display: flex;
  align-self: center;
  text-align: center;
  margin: 0;
}


.update-section {
  max-width: 1200px;
  margin: 0 auto;
}

